DRA-1287 Added messaging service to bff
